--- a/data_web/templates/backup/login.html
+++ b/data_web/templates/backup/login.html
@@ -11,7 +11,7 @@
     {% if form.error %}
         <p>Your username and password didn't match.Please try again.</p>
     {% endif %}
-    <form method="post" action="{% url 'users:login' %}">
+    <form method="post" action="{% url 'data_web:login' %}">
         {% csrf_token %}
         {{ form.as_p }}
 
